changed yml and grade 7 MPA physics folder for students

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,4 @@ nav:
   - Courses:
       - Python for Ops: 
           - Module 01: courses/python-for-ops/module-01/lesson.md
+      - Grade 7 Physics: 
