add mpa lesson and yml source file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,4 +11,4 @@ nav:
       - Python for Ops: 
           - Module 01: courses/python-for-ops/module-01/lesson.md
       - Grade 7 Physics:
-        - Lesson 1: C:\Users\Dell\Documents\edu-platform\docs\courses\Grade 7 Physics (MPA students)\something.md 
+        - Lesson 1: C:/Users/Dell/Documents/edu-platform/docs/courses/Grade 7 Physics (MPA students)/something.md
