add ykl doc and nothing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,4 @@ nav:
           - Module 01: courses/python-for-ops/module-01/lesson.md
       - Grade 7 Physics:
         - Lesson 1: courses/G7-Physics-MPA-students/something.md
+        - Lesson 2: courses/G7-Physics-MPA-students/nothing.md
